docs add swag description
